[package]
name = "hello_package"
version = "0.1.0"
authors = ["abhilash-ponnachan <abhilash.ponnachan@outlook.com>"]
edition = "2018"

[lib]
name = "banking"
path = "src/banking.rs"

[[bin]]
name = "main"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
